syntax = "proto3";

service UserService {
    rpc getUserDetail (UserRequest) returns (UserDetail) {
    }
}

message UserRequest {
    string id = 1;
}

message UserDetail {
    string id = 1;
    string name = 2;
    string sex = 4;
    string password = 3;
    string address = 5;
}